Fix clipped range inputs

--- a/public/global.css
+++ b/public/global.css
@@ -54,10 +54,6 @@ input:disabled {
     color: #ccc;
 }
 
-input[type="range"] {
-    height: 0;
-}
-
 button {
     color: #333;
     background-color: #f4f4f4;
